[project]
name = "schelling-out"
version = "0.1.0"
description = "City ranking tool based on quality-of-life factors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "geopy>=2.4.1",
    "gql[all]>=4.0.0",
    "jupyter>=1.1.1",
    "ladybug-comfort>=0.18.106",
    "ladybug-core>=0.44.38",
    "ladybug-pandas>=0.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
